favicon, new header, new pages, line-height

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,19 +2,20 @@
 <body>
 	<div id="body">
 		<div id="header">
-			<a href="/" title="Home"> <img src="/images/header.png" alt="header.png" width="287" height="157"></a>
+			<a href="/" title="Home"> <img src="/images/header.png" alt="header.png" width="283" height="137"></a>
 		</div>
 
 		<div id="nav">
 			<h2><a class="nav" href="http://timmschoof.com">About</a> </h2>
-			<h2><a class="nav" href="http://feeds.feedburner.com/timmschoof">RSS</a> </h2>
 			<h2><a class="nav" href="/archives.html">Archives</a> </h2>
+			<h2><a class="nav" href="/network.html">Network</a> </h2>
+			<h2><a class="nav" href="http://feeds.feedburner.com/timmschoof">Subscribe</a> </h2>
 		</div>
 
 		<div id="content">
 			{{ content }}
 		</div>
-		<div id="footer">This web page is licensed under a <a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons By-Sa license</a>.
+		<div id="footer">This web page is licensed under a <a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons By-Sa liLense</a>.
 		</div>
 	</div>
 </body>
