--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
 	<meta name="author" content="Timm Schoof" />
 	<meta name="generator" content="jekyll" />
 	<meta name="robots" content="all">
-	<link rel"icon" type="image/png" href="/-/images/favicon.png"/>
+	<link rel="Shortcut Icon" type="image/x-icon" href="/images/fav.png" />
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
 </head>
