fixed the crappy style-css to a certain extent

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div id="articles_post"
-<h2 class="title_post">{{ page.title }}</h2>
+<div id="article-container">
+<h2 class="title">{{ page.title }}</h2>
 {{ content }}
 </div>
