--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,16 +6,19 @@
 		</div>
 
 		<div id="nav">
-			<h2><a class="nav" href="http://timmschoof.com">About</a> </h2>
-			<h2><a class="nav" href="/archives.html">Archives</a> </h2>
-			<h2><a class="nav" href="/network.html">Network</a> </h2>
-			<h2><a class="nav" href="http://feeds.feedburner.com/timmschoof">Subscribe</a> </h2>
+			<a class="nav" href="http://timmschoof.com">About</a><br>
+			<a class="nav" href="/archives.html">Archives</a><br>
+			<a class="nav" href="/network.html">Network</a><br>
+			<a class="nav" href="http://feeds.feedburner.com/timmschoof">Subscribe</a>
 		</div>
 
 		<div id="content">
+			<div id="article-container">
 			{{ content }}
+			</div>
 		</div>
-		<div id="footer">This web page is licensed under a <a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons By-Sa License</a>.
+		<div id="footer">This web page is licensed under a <a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">CreativeCommons By-Sa License</a>. It uses the <a class="footer" href="http://font.ubuntu.com/">Ubuntu Font Family.
 		</div>
 	</div>
 </body>
+</html>
