fixing the space between two posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 			{{ content }}
 			</div>
 		</div>
-		<div id="footer">This web page is licensed under a <a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">CreativeCommons By-Sa License</a>. It uses the <a class="footer" href="http://font.ubuntu.com/">Ubuntu Font Family.
+		<div id="footer">This web page is licensed under a <a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">CreativeCommons By-Sa License</a>. It uses the <a class="footer" href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Love it.
 		</div>
 	</div>
 </body>
