hotfix for the footer. went all over the blog. now its floating left. not the real deal, but works. also the overflow:hidden didnt suit the body-tag so well.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,13 @@
 			<a class="nav" href="/network.html">Network</a><br>
 			<a class="nav" href="http://feeds.feedburner.com/timmschoof">Subscribe</a>
 		</div>
-
 		<div id="content">
 			<div id="article-container">
 			{{ content }}
 			</div>
 		</div>
-		<div id="footer">This web page is licensed under a <a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">CreativeCommons By-Sa License</a>. It uses the <a class="footer" href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Love it.
-		</div>
+		<div id="footer">
+		<p>This web page is licensed under a <a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">CreativeCommons By-Sa License</a>. It uses the <a class="footer" href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Love it.
+		</p></div>
 	</div>
 </body>
-</html>
