--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 
 		<div id="nav">
 			<a class="nav" href="http://timmschoof.com">About</a><br>
+			<a class="nav" href="/contact.html">Contact</a><br>
 			<a class="nav" href="/archives.html">Archives</a><br>
 			<a class="nav" href="/network.html">Network</a><br>
 			<a class="nav" href="http://feeds.feedburner.com/timmschoof">Subscribe</a>
