--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 	<meta name="generator" content="jekyll" />
 	<meta name="robots" content="all">
 	<link rel="Shortcut Icon" type="image/x-icon" href="/images/fav.png" />
-	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
+	<link rel="stylesheet" media="screen" href="./stylesheets/style.css"/>
 
 <!-- Google Analytics -->
 <script type="text/javascript">
