testing links in the css and html files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 	<meta name="author" content="Timm Schoof" />
 	<meta name="generator" content="jekyll" />
 	<meta name="robots" content="all">
-	<link rel="Shortcut Icon" type="image/x-icon" href="/images/fav.png" />
+	<link rel="Shortcut Icon" type="image/x-icon" href="./images/fav.png" />
 	<link rel="stylesheet" media="screen" href="./stylesheets/style.css"/>
 
 <!-- Google Analytics -->
