--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,14 @@
 <body>
 	<div id="body">
 		<div id="header">
-			<a href="/" title="Home"> <img src="./images/header.png" alt="header.png" width="283" height="137"></a>
+			<a href="/" title="Home"> <img src="/images/header.png" alt="header.png" width="283" height="137"></a>
 		</div>
 
 		<div id="nav">
 			<a class="nav" href="http://timmschoof.com">About</a><br>
-			<a class="nav" href="./contact.html">Contact</a><br>
-			<a class="nav" href="./archives.html">Archives</a><br>
-			<a class="nav" href="./network.html">Network</a><br>
+			<a class="nav" href="/contact.html">Contact</a><br>
+			<a class="nav" href="/archives.html">Archives</a><br>
+			<a class="nav" href="/network.html">Network</a><br>
 			<a class="nav" href="http://feeds.feedburner.com/timmschoof">Subscribe</a>
 		</div>
 		<div id="content">
