--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-23267421-1']);
-  _gaq.push(['_setDomainName', '.timmschoof.com']);
+  _gaq.push(['_setDomainName', '.blog.timmschoof.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
