--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-23267421-1']);
   _gaq.push(['_setDomainName', '.timmschoof.com']);
+  _gaq.push(['_setAllowHash', 'false']);
   _gaq.push(['_trackPageview']);
 
   (function() {
