--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -82,6 +82,7 @@ p {
 			margin-top: 10px;
 			margin-bottom: 5px;
 			font-size: 15px; 
+			line-height: 1.2;
 }
 		ul {
 			list-style-type: disc; 
