--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -74,6 +74,7 @@ i, em {
 		a:hover { 
 			opacity: 0.6;
 			-webkit-transition: 0.1s linear;
+			-moz-transition: 0.1s linear;
 }
 		a:visited { 
 			opacity: 0.6;
