--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -47,10 +47,11 @@ table {
 	border-spacing: 0;
 }
 /* My Shit */
-		@font-face { font-family: 'Ubuntu'; font-weight: normal; src:url(/fonts/Ubuntu-R.ttf); }
+		@font-face { font-family:Ubuntu; font-weight: normal; src:url(/fonts/Ubuntu-R.ttf); }
 		@font-face { font-family: 'Ubuntu'; font-weight: lighter; src:url(/fonts/Ubuntu-L.ttf); }
 		@font-face { font-family: 'Ubuntu'; font-weight: bold; src:url(/fonts/Ubuntu-B.ttf); }
 		@font-face { font-family: 'Ubuntu'; font-style: italic; src:url(/fonts/Ubuntu-LI.ttf); }
+		@font-face { font-family: 'Ubuntu'; font-style: italic; font-weight: bold; src:url(/fonts/Ubuntu-RI.ttf); }
 
 		body { 
 			background-color: #FFFFFF; 
@@ -106,7 +107,7 @@ p {
 			font-size: 20px; 
 			line-height: 1.8;
 }
-		b, strong {
+		b {
 			font-weight: normal;
 }
 em, i {
