--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -48,7 +48,7 @@ table {
 }
 /* My Shit */
 		@font-face { font-family:Ubuntu; font-weight: normal; src:url(/fonts/Ubuntu-R.ttf); }
-		@font-face { font-family: 'Ubuntu'; font-weight: lighter; src:url(/fonts/Ubuntu-L.ttf); }
+		@font-face { font-family:Ubuntu; font-weight: lighter; src:url(/fonts/Ubuntu-L.ttf); }
 		@font-face { font-family: 'Ubuntu'; font-weight: bold; src:url(/fonts/Ubuntu-B.ttf); }
 		@font-face { font-family: 'Ubuntu'; font-style: italic; src:url(/fonts/Ubuntu-LI.ttf); }
 		@font-face { font-family: 'Ubuntu'; font-style: italic; font-weight: bold; src:url(/fonts/Ubuntu-RI.ttf); }
