--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -104,12 +104,13 @@ p {
 			font-size: 20px; 
 			line-height: 1.8;
 }
-		b {
+		strong, b {
 			font-weight: normal;
 			font-style: normal;
 }
 		em, i {
 			font-style: italic;
+			font-weight: lighter;
 }
 		h2 {  
 			font-weight: lighter;
