--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -106,7 +106,7 @@ p {
 		strong, b {
 			font-weight: normal;
 			font-style: normal;
-			font-family: 'Ubuntu'; 
+			font-family: "Ubuntu"; 
 }
 		em, i {
 			font-style: italic;
