--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -46,9 +46,8 @@ table {
 	border-spacing: 0;
 }
 /* My Shit */
-		@font-face { font-family: "Ubuntu"; font-weight: normal; font-style: normal; src:url("/fonts/Ubuntu-R.ttf"); }
+		@font-face { font-family: "Ubuntu"; font-weight: bold; font-style: normal; src:url("/fonts/Ubuntu-R.ttf"); }
 		@font-face { font-family: "Ubuntu"; font-weight: lighter; src:url("/fonts/Ubuntu-L.ttf"); }
-		@font-face { font-family: "Ubuntu"; font-weight: bold; src:url("/fonts/Ubuntu-B.ttf"); }
 		@font-face { font-family: "Ubuntu"; font-style: italic; src:url("/fonts/Ubuntu-LI.ttf"); }
 		@font-face { font-family: "Ubuntu"; font-style: italic; font-weight: bold; src:url("/fonts/Ubuntu-RI.ttf"); }
 
@@ -104,7 +103,7 @@ p {
 			line-height: 1.8;
 }
 		strong, b {
-			font-weight: normal;
+			font-weight: bold;
 			font-style: normal;
 			font-family: "Ubuntu"; 
 }
