--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -104,12 +104,10 @@ p {
 }
 		strong, b {
 			font-weight: bold;
-			font-style: normal;
-			font-family: "Ubuntu"; 
 }
 		em, i {
 			font-style: italic;
-			font-weight: lighter;
+			
 }
 		h2 {  
 			font-weight: lighter;
@@ -126,7 +124,7 @@ p {
 }
 
 .title, .title a { 	
-			font-weight: normal;
+			font-weight: bold;
 			font-size: 24px; 
 			text-decoration: none;
 			line-height: 1.8;
