--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -82,7 +82,7 @@ table {
 }
 		code {
 			font-family: "Courier";
-			text-indent: 20px;
+			padding-left: 20px;
 			background-color: #F0F8FF;
 }		
 		ul {
