--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -82,8 +82,8 @@ table {
 }
 		code {
 			font-family: "Courier";
-			padding-left: 20px;
-			background-color: #F0F8FF;
+			margin-left: 20px;
+			background-color: #E6E6E6;
 }		
 		ul {
 			list-style-type: disc; 
