--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,8 +7,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+small, strike, strong, sub, sup, tt, var, b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -47,24 +46,22 @@ table {
 	border-spacing: 0;
 }
 /* My Shit */
-		@font-face { font-family: 'Ubuntu'; font-weight: normal; src: url(/fonts/Ubuntu-R.ttf); }
-		@font-face { font-family: 'Ubuntu'; font-weight: lighter; src: url(/fonts/Ubuntu-L.ttf); }
-		@font-face { font-family: 'Ubuntu'; font-weight: bold; src: url(/fonts/Ubuntu-B.ttf); }
-		@font-face { font-family: 'Ubuntu'; font-style: italic; src: url(/fonts/Ubuntu-LI.ttf); }
+		@font-face { font-family: "Ubuntu"; font-weight: bold; font-style: normal; src:url("/fonts/Ubuntu-R.ttf"); }
+		@font-face { font-family: "Ubuntu"; font-weight: lighter; src:url("/fonts/Ubuntu-L.ttf"); }
+		@font-face { font-family: "Ubuntu"; font-style: italic; src:url("/fonts/Ubuntu-LI.ttf"); }
+		@font-face { font-family: "Ubuntu"; font-style: italic; font-weight: bold; src:url("/fonts/Ubuntu-RI.ttf"); }
 
 		body { 
 			background-color: #FFFFFF; 
 			color: #303030; 
-			font-family: 'Ubuntu'; 
+			font-family: "Ubuntu"; 
 			font-weight: lighter;
 			font-size: 15px; 
-			line-height: 1.2;
+			line-height: 1.4;
+			text-align: justify;
     			width: 900px;
     			margin: 0 auto;
 			min-height: 100%;
-}
-i, em {
-			font-weight: italic;
 }
 		a { 
 			text-decoration: underline; 
@@ -73,15 +70,23 @@ i, em {
 		a:hover { 
 			opacity: 0.6;
 			-webkit-transition: 0.1s linear;
+			-moz-transition: 0.1s linear;
 }
 		a:visited { 
 			opacity: 0.6;
 }
-p {
+		p {
 			margin-top: 10px;
 			margin-bottom: 5px;
 			font-size: 15px; 
 }
+		code {
+			font-family: "Courier";
+			margin-left: 20px;
+			padding-left: 2px;
+			padding-right: 2px;
+			background-color: #F5F5F5;
+}		
 		ul {
 			list-style-type: disc; 
 			outside; 
@@ -104,11 +109,12 @@ p {
 			font-size: 20px; 
 			line-height: 1.8;
 }
-		b, strong {
-			font-weight: normal;
+		strong, b {
+			font-weight: bold;
 }
-em, i {
+		em, i {
 			font-style: italic;
+			
 }
 		h2 {  
 			font-weight: lighter;
@@ -123,9 +129,8 @@ em, i {
 			margin-top: 10px;
 			margin-bottom: -11px;
 }
-
 .title, .title a { 	
-			font-weight: normal;
+			font-weight: bold;
 			font-size: 24px; 
 			text-decoration: none;
 			line-height: 1.8;
@@ -147,6 +152,7 @@ em, i {
 			width: 170px;
 			float: right;
 			margin-top: 20px;
+			margin-bottom: 20px;
 			padding-top: 10px;
 }
 .nav, .nav a {
@@ -161,6 +167,7 @@ em, i {
 			width: 670px;
 			display: block;
 			height: auto;
+			min-height: 180px;
 			float: left;
 			padding-bottom: 20px;
 			padding-top: 10px;
@@ -178,7 +185,7 @@ em, i {
 			font-weight: normal;
 }
 #article-container {
-			line-height: 1.6;	
+			line-height: 1.5;	
 }
 #article {
 			
@@ -202,7 +209,7 @@ blockquote {
 			border-left: 1px solid #999;
 			margin-left: 10px;
 			padding-left: 10px;
-			opacity: 0.8;
+			opacity: 0.85;
 }
 hr {
 			border-width: 0px; 
