--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -218,7 +218,7 @@ hr {
 			width: 150px; 
 			margin-right: 520px; 
 }
-sup {vertical-align: super; font-size: 10px; margin: 0 0 0 2px;}
+sup {vertical-align: top; font-size: 11px; font-weight: bold; margin: 0 0 0 2px;}
 .footnotes { margin: 45px 25px 25px 6px; font-size: 12px; color: #777;}
 .footnotes ol {list-style-type: decimal; margin: 0 0 0 5px;}
 .footnotes li {margin-left: 3%; margin-bottom: 1ex;}
