--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -46,11 +46,12 @@ table {
 	border-spacing: 0;
 }
 /* My Shit */
-		@font-face { font-family: "Ubuntu"; font-weight: bold; font-style: normal; src:url("/fonts/Ubuntu-R.ttf"); }
+		/* @font-face { font-family: "Ubuntu"; font-weight: bold; font-style: normal; src:url("/fonts/Ubuntu-R.ttf"); }
 		@font-face { font-family: "Ubuntu"; font-weight: lighter; src:url("/fonts/Ubuntu-L.ttf"); }
 		@font-face { font-family: "Ubuntu"; font-style: italic; src:url("/fonts/Ubuntu-LI.ttf"); }
 		@font-face { font-family: "Ubuntu"; font-style: italic; font-weight: bold; src:url("/fonts/Ubuntu-RI.ttf"); }
-
+*/
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:light,lightitalic,regular,italic&v1' rel='stylesheet' type='text/css'>
 		body { 
 			background-color: #FFFFFF; 
 			color: #282828 ; 
