--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -110,7 +110,7 @@ table {
 			line-height: 1.8;
 }
 		strong, b {
-			font-weight: bold;
+			font-weight: normal;
 }
 		em, i {
 			font-style: italic;
@@ -130,7 +130,7 @@ table {
 			margin-bottom: -11px;
 }
 		.title, .title a { 	
-			font-weight: bold;
+			font-weight: normal;
 			font-size: 24px; 
 			text-decoration: none;
 			line-height: 1.8;
