--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -64,6 +64,10 @@ table {
     			margin: 0 auto;
 			min-height: 100%;
 }
+		header {
+			font-family: "Ubuntu", sans-serif; 
+			font-weight: normal;
+}		 
 		a { 
 			text-decoration: underline; 
 			color: #282828;
