--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -223,6 +223,9 @@ blockquote {
 			padding-left: 10px;
 			opacity: 0.85;
 }
+.instapaper_title {	display: none;
+}
+
 hr {
 			border-width: 0px; 
 			border-top: 1px solid #EEE; 
