--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -223,6 +223,8 @@ blockquote {
 			padding-left: 10px;
 			opacity: 0.85;
 }
+.author{		display: none;
+}
 hr {
 			border-width: 0px; 
 			border-top: 1px solid #EEE; 
