--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -167,6 +167,8 @@ table {
 			margin-bottom: 20px;
 			padding-top: 10px;
 }
+#navsub {		display: none;
+}
 .nav, .nav a {
 			font-size: 20px;
 			line-height: 1.8;
