--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -167,7 +167,7 @@ table {
 			margin-bottom: 20px;
 			padding-top: 10px;
 }
-#navsub {		display: none;
+.navsub {		display: none;
 }
 .nav, .nav a {
 			font-size: 20px;
