--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -167,7 +167,7 @@ table {
 			margin-bottom: 20px;
 			padding-top: 10px;
 }
-.navsub {		display: none;
+#navsub {		display: none;
 }
 .nav, .nav a {
 			font-size: 20px;
@@ -176,7 +176,7 @@ table {
 			font-weight: lighter;
 			margin-left: 5px; 
 }
-.subtrigger a:hover + .navsub {	
+.subtrigger a:hover + #navsub {	
 			display: block;
 }
 #content {
