--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -243,7 +243,7 @@ sup {vertical-align: top; font-size: 10px; font-weight: normal; margin: 0 0 0 2p
 div.episode h3 { 
 			margin-top: 20px;
 }
-div.episode p {
+div.episode p.description {
  			margin-bottom: 30px;			
 }
 
