--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -132,7 +132,7 @@ table {
 			
 }
 		h3 {
-			font-weight: lighter;
+			font-weight: normal;
 			font-size: 18px;
 			line-height: 1.8;
 			margin-top: 10px;
