--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -74,7 +74,7 @@ table {
 }
 		a:hover { 
 			opacity: 0.6;
-			-webkit-transition: 0.12s linear;
+			-webkit-transition: 0.12s;
 			-moz-transition: 0.12s linear;
 }
 		a:visited { 
