--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -137,7 +137,7 @@ table {
 			margin-bottom: -11px;
 }
 
-.article-container h3 {
+.content h3 {
 			font-weight: normal;
 			font-size: 23px;
 			line-height: 1.8;
