--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -63,9 +63,10 @@ body {
 
 h1.header {
 		font-size: 30px;
-		text-decoration: none;
 }
 a.header { 
+		text-decoration: none;
+		font-color: black;
 }
 
 
