--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -65,8 +65,8 @@ a {
 }
 
 h1.header {
-		font-size: 35px;
-		font-weight: bold;
+		font-size: 40px;
+		font-weight: lighter;
 }
 a.header { 
 		text-decoration: none;
