--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -52,7 +52,7 @@ table {
 
 body {
 		font-family: "Ubuntu", sans-serif;
-		text-align:center;
+		margin: 0 auto; 
 }
 wrapper {
 		max-width: 870px;
