--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -54,6 +54,7 @@ body {
 		font-family: "Ubuntu", sans-serif;
 		margin: 0 auto; 
 		max-width: 850px;
+		padding: 10%;
 }
 a {
 		text-decoration: underline 1px solid;
