--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -53,9 +53,12 @@ table {
 body {
 		font-family: "Ubuntu", sans-serif;
 		margin: 0 auto; 
-		max-width: 850px;
+		max-width: 870px;
 		min-width: 300px;
 		padding: 7%;
+}
+p.body {
+		max-width: 800px;
 }
 a {
 		text-decoration: underline 1px solid;
