--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -56,6 +56,8 @@ body {
 		max-width: 870px;
 		min-width: 300px;
 		padding: 7%;
+		font-size: 100%;
+        line-height: 1.6875;
 }
 p,li {
 		max-width: 800px;
