--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -81,6 +81,7 @@ h1.header {
 		font-size: 2.61em;
 		font-weight: lighter;
 		line-height: 1.0;
+		line-height:1.2em;
 }
 a.header { 
 		text-decoration: none;
