--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -55,11 +55,14 @@ table {
 }
 @media only screen and (max-width: 800px) {
                 body { font-size:100%;}
-    }  
- 
+}   
 @media only screen and (max-width: 1100px) {
                 body { font-size:120%;}
-    }  
+}  
+@media only screen and (min-width: 1100px) {
+                body { font-size:120%;}
+                .wrap {max-width:770px;}
+}
 body {
 		font-family: "Ubuntu", sans-serif;
 		margin: 0 auto; 
