--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -55,16 +55,16 @@ body {
 		font-family: "Ubuntu", sans-serif;
 		margin: 0 auto; 
 /*		max-width: 870px;*/
-		padding: 7%;
 		font-size: 100%;
         line-height: 1.6875;
 }
 .wrap {
-		width:90%;
+		width:93%;
 		margin:0 auto;
 }
 p {
 		font-size: 1em;	
+		margin: 1.68em 0;
 }
 a {
 		text-decoration: underline 1px solid;
@@ -83,6 +83,7 @@ h1.header {
 		font-weight: lighter;
 		line-height: 1.0;
 		line-height:1.2em;
+		margin: 1.0em 0;
 }
 a.header { 
 		text-decoration: none;
@@ -92,9 +93,6 @@ a.header {
 
 /* word-wrap: break-word; */
 
-@media only screen and (max-width: 400px) {
-		body { font-size:130%;}
-}
 @media only screen and (max-width: 800px) {
                 body { font-size:100%;}
 }   
@@ -104,4 +102,7 @@ a.header {
 @media only screen and (min-width: 1100px) {
                 body { font-size:120%;}
                 .wrap {max-width:770px;}
+}
+@media only screen and (max-width: 400px) {
+		body { font-size:130%;}
 }
