--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -63,7 +63,7 @@ body {
 		margin:0 auto;
 }
 p {
-/*		font-size: 1em;	*/
+		font-size: 1em;	
 		margin: 1.68em 0;
 }
 a {
@@ -102,6 +102,6 @@ a.header {
 		body { font-size:100%;}
 	}   
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 700px) {
 		body { font-size:150%;}
 }
