--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -101,6 +101,6 @@ a.header {
 		body { font-size:100%;}
 	}   
 }
-@media only screen and (max-width: 500px) {
-		body { font-size:150%;}
-}
+/*@media only screen and (max-width: 400px) {
+		body { font-size:90%;}
+}*/
