--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -46,21 +46,18 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /* 
-	My Stuff 
+		My Stuff 
 */
 
-
-body {
+#wrapper {
 		font-family: "Ubuntu", sans-serif;
 		margin: 0 auto; 
 		max-width: 870px;
+		width:93%;
 		font-size: 100%;
         line-height: 1.6875;
-}
-.wrap {
-		width:93%;
-		margin:0 auto;
 }
 p {
 		font-size: 1em;	
@@ -73,27 +70,13 @@ a {
 a:hover { 
 		
 }
-#header { 
-		margin: 40px auto 50px auto;
-		text-align: center;
-}
 
-h1.header {
-		font-size: 3.0em;
-		font-weight: lighter;
-		line-height:1.2em;
-		margin: 1.0em 0;
-}
-a.header { 
-		text-decoration: none;
-		color: black;
-}
 
 
 /* word-wrap: break-word; */
 
 	@media only screen and (min-width: 1100px) {
-		body { font-size:110%;}
+		body { font-size:120%;}
 		.wrap {max-width:770px;}
 	}  
 	       
@@ -102,9 +85,5 @@ a.header {
 	}   
 }
 @media only screen and (max-width: 400px) {
-		body { font-size:30px;}
-		p {
-		font-size: 2em;	
-		
-}
+		body { font-size:90%;}
 }
