--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -64,7 +64,6 @@ table {
 		margin: 40px auto 50px auto;
 		text-align: center;
 }
-
 h1.header {
 		font-size: 3.0em;
 		font-weight: lighter;
@@ -87,22 +86,18 @@ a {
 		color: black;
 }
 a:hover { 
-		
 }
-
-
-
-/* word-wrap: break-word; */
-
-	@media only screen and (min-width: 1100px) {
+#picture img {
+width: 100%;
+}
+@media only screen and (min-width: 1100px) {
 		body { font-size:120%;}
 		.wrap {max-width:770px;}
-	}  
-	       
-	@media only screen and (max-width: 800px) {
+}  	       
+@media only screen and (max-width: 800px) {
 		body { font-size:100%;}
-	}   
-}
+}   
 @media only screen and (max-width: 400px) {
 		body { font-size:90%;}
 }
+/* word-wrap: break-word; */
