--- a/_includes/head_new.html
+++ b/_includes/head_new.html
@@ -2,6 +2,7 @@
 <head>  
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:light,lightitalic,regular,italic,bold&v1' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
+	<meta charset="utf-8"/>
 	<title>{{ page.title }} | {{ site.title }}</title>
 	<meta name="author" content="Timm Schoof" />
 	<meta name="keywords" content="Timm, Schoof, Tech, Blog, Apple, Jekyll, Ubuntu, Linux, Movies, Films, Food, Creative Commons" />
