--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -61,7 +61,7 @@ table {
         padding: 2%;
 }
 #header { 
-		margin: 40px auto 50px auto;
+		margin: 2em auto 2em auto;
 		text-align: center;
 }
 h1.header {
