--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -89,6 +89,11 @@ a:hover {
 #picture img {
 width: 100%;
 }
+#footer {
+		background-color: #424242;
+		color: #E6E6E6;
+}
+
 @media only screen and (min-width: 1100px) {
 		body { font-size:115%;}
 		.wrap {max-width:800px;}
