--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -94,6 +94,9 @@ width: 100%;
 		background-color: #424242;
 		color: #E6E6E6;
 }
+p.footer { 
+		background-color: #424242;
+} 
 
 @media only screen and (min-width: 1100px) {
 		body { font-size:115%;}
