--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -96,7 +96,8 @@ width: 100%;
 }
 p.footer { 
 		background-color: #424242;
-		margin: 0.0em 0;
+		margin: 0 0 0 0;
+		padding-bottom: 0.5em;
 } 
 
 @media only screen and (min-width: 1100px) {
