--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -93,12 +93,10 @@ width: 100%;
 		width: 100%;
 		background-color: #424242;
 		color: #E6E6E6;
-}
-p.footer { 
-		background-color: #424242;
 		margin: 0 0 0 0;
 		padding-bottom: 0.5em;
-} 
+		margin-bottom: 0px; position: absolute; bottom:0.2em;
+}
 
 @media only screen and (min-width: 1100px) {
 		body { font-size:115%;}
