--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -94,8 +94,7 @@ width: 100%;
 		background-color: #424242;
 		color: #E6E6E6;
 		margin: 0 0 0 0;
-		padding-bottom: 0.5em;
-		margin-bottom: 0px; position: absolute; bottom:0.2em;
+		margin-bottom: 0px; position: relative; bottom:0.2em;
 }
 
 @media only screen and (min-width: 1100px) {
