--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -93,8 +93,10 @@ width: 100%;
 		width: 100%;
 		background-color: #424242;
 		color: #E6E6E6;
-		margin: 0 0 0 0;
-		margin-bottom: 0px; position: relative; bottom:0.2em;
+		position:absolute;
+   		bottom:0;
+   		width:100%;
+   		height:30px; 
 }
 
 @media only screen and (min-width: 1100px) {
