--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -59,7 +59,6 @@ table {
 		font-size: 100%;
         line-height: 1.6875;
         padding: 2%;
-        padding-bottom:30px;
 }
 #header { 
 		margin: 2em auto 2.2em auto;
@@ -94,7 +93,7 @@ width: 100%;
 		width: 100%;
 		background-color: #424242;
 		color: #E6E6E6;
-		position:absolute;
+		position:relative;
    		bottom:0;
    		width:100%;
    		height:30px; 
