--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -96,7 +96,7 @@ width: 100%;
 		position:relative;
    		bottom:0;
    		width:100%;
-   		height:30px; 
+   		height:2em; 
 }
 
 @media only screen and (min-width: 1100px) {
