--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -96,17 +96,18 @@ width: 100%;
 		position:relative;
    		bottom:0;
    		width:100%;
-   		height:2em; 
+   		height:2em;
+   		word-wrap: break-word; 
 }
 
 @media only screen and (min-width: 1100px) {
 		body { font-size:115%;}
-		.wrap {max-width:800px;}
 }  	       
 @media only screen and (max-width: 800px) {
 		body { font-size:100%;}
 }   
 @media only screen and (max-width: 400px) {
 		body { font-size:90%;}
+		
 }
 /* word-wrap: break-word; */
