--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -96,8 +96,7 @@ width: 100%;
 		position:relative;
    		bottom:0;
    		width:100%;
-   		height:2em;
-   		word-wrap: break-word; 
+   		height:100%;
 }
 
 @media only screen and (min-width: 1100px) {
