--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -97,6 +97,7 @@ width: 100%;
    		bottom:0;
    		width:100%;
    		height:100%;
+   		margin: 0 0 0 0;
 }
 
 @media only screen and (min-width: 1100px) {
