--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -97,7 +97,8 @@ width: 100%;
    		bottom:0;
    		width:100%;
    		height:100%;
-   		margin: 0 0 0 0;
+   		-webkit-margin-before: 0em;
+		-webkit-margin-after: 0em;
 }
 
 @media only screen and (min-width: 1100px) {
