--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -100,6 +100,10 @@ width: 100%;
    		-webkit-margin-before: 0em;
 		-webkit-margin-after: 0em;
 }
+p.footer {
+		-webkit-margin-before: 1em;
+		-webkit-margin-after: 1em;
+}
 
 @media only screen and (min-width: 1100px) {
 		body { font-size:115%;}
