--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -99,8 +99,7 @@ width: 100%;
    		height:100%;
 }
 p.footer {
-		-webkit-margin-before: 0em;
-		-webkit-margin-after: 0em;
+		margin: 0 0 0 0;
 }
 
 @media only screen and (min-width: 1100px) {
