--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -96,10 +96,10 @@ width: 100%;
 		position:relative;
    		bottom:0;
    		width:100%;
-   		height:100%;
+   		height:auto;
 }
 p.footer {
-		margin: 0 0 0 0;
+
 }
 
 @media only screen and (min-width: 1100px) {
