--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -79,10 +79,10 @@ a.header {
 p {
 		font-size: 1em;	
 		margin: 1.68em 0;
-		-webkit-margin-before: 0em;
-		-webkit-margin-after: 0em;
+		-webkit-margin-before: 0px;
+		-webkit-margin-after: 0px;
 		-webkit-margin-start: 0px;
-		-webkit-margin-end: -1px;
+		-webkit-margin-end: 0px;
 }
 a {
 		text-decoration: underline 1px solid;
