--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -103,7 +103,7 @@ width: 100%;
    		height:auto;
 }
 p.footer {
-		vertical-align: bottom; 
+		margin-bottom: -1px;
 }
 
 @media only screen and (min-width: 1100px) {
