--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -98,10 +98,11 @@ width: 100%;
 		background-color: #424242;
 		color: #E6E6E6;
 		position:relative;
-   		bottom:-1;
+   		bottom:0;
    		width:100%;
    		height:100%;
    		text-align: center;
+   		margin-bottom: 0.1em;
 }
 p.footer {
 }
