--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -105,6 +105,7 @@ width: 100%;
    		margin-bottom: 0.1em;
 }
 p.footer {
+		margin-bottom: 0.1em;
 }
 
 @media only screen and (min-width: 1100px) {
