--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -51,8 +51,13 @@ table {
 		My Stuff 
 */
 
-#wrapper {
+body {
 		font-family: "Ubuntu", sans-serif;
+		font-weight: lighter; 
+}
+
+#wrapper {
+		
 		margin: 0 auto; 
 		width: 93%;
 		max-width: 870px;
@@ -79,10 +84,6 @@ a.header {
 p {
 		font-size: 1em;	
 		margin: 1.68em 0;
-		-webkit-margin-before: 0px;
-		-webkit-margin-after: 0px;
-		-webkit-margin-start: 0px;
-		-webkit-margin-end: 0px;
 }
 a {
 		text-decoration: underline 1px solid;
@@ -98,13 +99,12 @@ width: 100%;
 		background-color: #424242;
 		color: #E6E6E6;
 		position:relative;
-   		bottom:auto;
+   		bottom:0;
    		width:100%;
    		height:100%;
    		text-align: center;
 }
 p.footer {
-		margin-bottom: 0.5em;
 }
 
 @media only screen and (min-width: 1100px) {
