--- a/_includes/head_new.html
+++ b/_includes/head_new.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>  
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu:light,lightitalic,regular,italic,bold&v1' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 	<meta charset="utf-8"/>
 	<title>{{ page.title }} | {{ site.title }}</title>
