--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -53,7 +53,7 @@ table {
 
 body {
 		font-family: "Ubuntu", sans-serif;
-		font-weight: light; 
+		font-weight: 300; 
 }
 
 #wrapper {
@@ -71,7 +71,7 @@ body {
 }
 h1.header {
 		font-size: 3.0em;
-		font-weight: light;
+		font-weight: 300;
 		line-height:1.1em;
 }
 a.header { 
