--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -67,6 +67,8 @@ body {
 #header { 
 		margin: 2em auto 2.2em auto;
 		text-align: center;
+		border: 0.2em 0;
+		border-color: #017890;
 }
 h1.header {
 		font-size: 3.0em;
