--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -68,7 +68,7 @@ body {
 		margin: 2em auto 2.2em auto;
 		text-align: center;
 		width: 130%;
-		padding: 1.0em auto;
+		padding: 1.0em 0;
 		background-color: #E95D22;
 		overflow: hidden;
 }
