--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -67,7 +67,8 @@ body {
 #header { 
 		margin: 2em auto 2.2em auto;
 		text-align: center;
-		width: 130%;
+		width: 100%;
+		max-width: 870px;
 		padding: 1.0em 0;
 		background-color: #E95D22;
 		overflow: hidden;
