--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -70,7 +70,7 @@ body {
 		width: 100%;
 
 		padding: 1.0em 0;
-		background-color: #E95D22;
+		background-color: rgba(233,93,34,0.6);
 		overflow: hidden;
 }
 h1.header {
