--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -70,7 +70,7 @@ body {
 		width: 100%;
 
 		padding: 1.0em 0;
-		background-color: rgba(233,93,34,0.6);
+		background-color: rgba(233,93,34,0.8);
 		overflow: hidden;
 }
 h1.header {
@@ -80,7 +80,7 @@ h1.header {
 }
 a.header { 
 		text-decoration: none;
-		color: white;
+		color: black;
 }
 #content {
 		width: 100%;
