--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -68,9 +68,8 @@ body {
 		margin: 2em auto 2.2em auto;
 		text-align: center;
 		width: 100%;
-
 		padding: 1.0em 0;
-		background-color: rgba(217,204,185,1.0);
+		background-color: rgba(1,120,144,1.0);
 		overflow: hidden;
 }
 h1.header {
@@ -80,7 +79,7 @@ h1.header {
 }
 a.header { 
 		text-decoration: none;
-		color: black;
+		color: white;
 }
 #content {
 		width: 100%;
