--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -68,9 +68,8 @@ body {
 		margin: 2em auto 2.2em auto;
 		text-align: center;
 		width: 100%;
-		padding: 1.0em 0;
+		padding: 1.0em 0.2em;
 		background-color: rgba(1,120,144,1.0);
-		overflow: hidden;
 }
 h1.header {
 		font-size: 3.0em;
