--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -67,7 +67,7 @@ body {
 #header { 
 		margin: 2em auto 2.2em auto;
 		text-align: center;
-		width: 100%;
+		max-width: 100%;
 		padding: 1.0em 0.7em;
 		background-color: rgba(1,120,144,1.0);
 }
