--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -69,8 +69,8 @@ body {
 		text-align: center;
 		max-width: 100%;
 		padding: 1.0em 0.7em;
-		background-color: rgba(1,120,144,1.0);
-		border-bottom: 1px solid black;
+		/* background-color: rgba(1,120,144,1.0); */
+		border-bottom: 0.5em solid rgba(1,120,144,1.0);
 }
 h1.header {
 		font-size: 3.0em;
