--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -90,11 +90,11 @@ p {
 		margin: 1.68em 0;
 }
 #content a {
-		color: #017890;
+		color: #006699;
 		text-decoration: none;
 }
 #content a:hover { 
-		color: #E95D22;
+		color: #66FF33;
 }
 #picture img {
 width: 100%;
