--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -54,7 +54,7 @@ table {
 body {
 		font-family: 'Ubuntu', sans-serif;
 		font-weight: 300; 
-		background-color: #FBF8EF;
+		background-color: #F2F2F2;
 }
 
 #wrapper {
