--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -54,7 +54,7 @@ table {
 body {
 		font-family: 'Ubuntu', sans-serif;
 		font-weight: 300; 
-		background-color: rgba(242,242,242,0.5);
+		background-color: #FDFDFD;
 }
 
 #wrapper {
