--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -1,23 +1,30 @@
 {% include head_new.html %}
 <body>
 
-		<div id="header">
-			<h1 class="header"><a class="header" title="Home" href="/">blog.&#8203;timmschoof.&#8203;com</a></h1>
-		</div>
-		<div id="wrapper">  
-			<a class="nav" href="http://timmschoof.com">About</a><br>
-			<a class="nav" href="/contact/">Contact</a><br>
-			<a class="nav" href="/archives/">Archives</a><br>
-			<a class="nav" href="http://feeds.feedburner.com/timmschoof">Subscribe</a><br><br>
-			<a class="nav" href="/search/">Search</a>
+<div id="header">
+		<h1 class="header"><a class="header" title="Home" href="/">blog.&#8203;timmschoof.&#8203;com</a></h1>
+</div> <!--header-->
 
-		<div id="content">
+<div id="wrapper">
+  
+	<div id="navigation">
+			<a href="http://timmschoof.com">About</a><br>
+			<a href="/contact/">Contact</a><br>
+			<a href="/archives/">Archives</a><br>
+			<a href="http://feeds.feedburner.com/timmschoof">Subscribe</a><br><br>
+			<a href="/search/">Search</a>
+	</div> <!--navigation-->
+	
+	<div id="content">
 			{{ content }}
-		</div>
-</div>
+	</div> <!--content-->
+	
+</div><!--wrapper-->
+
 <div id="footer">
 		<p><a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-Sa</a>. <a class="footer" href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Proudly generated using <a class="footer" href="http://jekyllrb.com/">Jekyll</a>. Currently coming to you from <span style="color:#0B610B">Dublin, Ireland</span>.</p>
-</div>
+</div> <!--footer-->
+
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'blogtimmschoof'; // required: replace example with your forum shortname
