--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -55,7 +55,7 @@ body {
 		font-family: 'Ubuntu', sans-serif;
 		font-weight: 300; 
 		background-color: #FFFFFF;
-		padding 1em 20%; /* temp */
+		padding: 0 5%;
 }
 p {
 		font-size: 1em;	
@@ -75,7 +75,7 @@ h1 {
 		margin-top: 0.8571em; /* 24px */
 }
 h2 {
-		font-weight: 300;
+		font-weight: 400;
 		font-size: 1.5em; /* 24px */
 		line-height: 1.16; /* 28px */
 		margin-top: 0.9166em; /* 22px */
@@ -122,8 +122,7 @@ width: 100%;
    		height:100%;
    		text-align: center;
 }
-p.footer {
-}
+
 
 @media only screen and (min-width: 1100px) {
 		body { font-size:115%;}
@@ -133,6 +132,6 @@ p.footer {
 }   
 @media only screen and (max-width: 400px) {
 		body { font-size:90%;}
-		
 }
+
 /* word-wrap: break-word; */
