--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -83,7 +83,7 @@ h2 {
 		margin: 2em auto;
 		text-align: center;
 		max-width: 100%;
-	/*	padding: 1.0em 0.7em; */
+		padding: 1.0em 0.5em;
 		background-color: #FF6600;
 		/* border-top: 0.5em solid rgba(1,120,144,1.0);
 		border-bottom: 0.5em solid rgba(1,120,144,1.0); */
