--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -108,6 +108,9 @@ a.header {
 #content {
 		width: 100%;
 }
+h1.title {
+		text-decoration: underline 1px solid black;
+}
 a.title {
 		color: black;
 }
