--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -149,6 +149,9 @@ video {
     height: 100%;
     position: absolute;
 }
+iframe.media-object {
+    max-width: 100%;
+}
 #footer {
 		background-color: #424242;
 		color: #E6E6E6;
