--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -125,29 +125,34 @@ img {
 }
 video {
 		max-width: 100%;
+		height: auto;
 }
-.media-object-wrapper-16-9 {
+.video-container-16-9 {
     padding-bottom: 56.25%; /* 16:9 */
     width: 100%;
     height: 0;
     position: relative;
 }
-.media-object-wrapper-16-10 {
+.video-container-16-10 {
     padding-bottom: 62.5%; /* 16:10 */
     width: 100%;
     height: 0;
     position: relative;
 }
-.media-object-wrapper-4-3 {
+.video-container-4-3 {
     padding-bottom: 75.0%; /* 4:3 */
     width: 100%;
     height: 0;
     position: relative;
 }
-.media-object-wrapper iframe.media-object {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+.video-container iframe,  
+.video-container object,  
+.video-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 #footer {
 		background-color: #424242;
