--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -154,6 +154,9 @@ video {
 	width: 100%;
 	height: 100%;
 }
+.video-wrapper {
+	max-width: 100%;
+}
 #footer {
 		background-color: #424242;
 		color: #E6E6E6;
