--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -145,15 +145,15 @@ video {
 	padding-top: 25px;
 	height: 0;
 }
-.videoWrapper iframe {
+.videoWrapper-16-9 iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 }
-.videoWrapper object,
-.videoWrapper embed,  {
+.videoWrapper-16-9 object,
+.videoWrapper-16-9 embed,  {
 	position: absolute;
 	top: 0;
 	left: 0;
