--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -100,7 +100,7 @@ a.header {
 }
 #wrapper {
 		margin: 0 auto; 
-	/*	max-width: 870px; */
+		max-width: 870px;
 		font-size: 100%;
         line-height: 1.6875;
         padding: 0 5%;
