--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -141,7 +141,7 @@ video {
 }
 .videoWrapper-4-3 {
 	position: relative;
-	padding-bottom: 75.0%
+	padding-bottom: 75.0%;
 	padding-top: 25px;
 	height: 0;
 }
