--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -3,7 +3,7 @@
 <body>
 
 <div id="header">
-		<h1 class="header"><a class="header" title="Home" href="/">blog.&#8203;timmschoof.&#8203;com</a></h1>
+		<h1 class="header"><a class="header" title="Home" href="/">blog.&#8203;timmschoof&#8203;.com</a></h1>
 </div> <!--header-->
 
 <div id="wrapper">
