--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -12,8 +12,7 @@
 			<a href="http://timmschoof.com">About</a><br>
 			<a href="/contact/">Contact</a><br>
 			<a href="/archives/">Archives</a><br>
-			<a href="http://feeds.feedburner.com/timmschoof">Subscribe</a><br><br>
-			<a href="/search/">Search</a>
+			<a href="http://feeds.feedburner.com/timmschoof">Subscribe</a><br>
 	</div> <!--navigation-->
 	
 	<div id="content">
