--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -9,10 +9,12 @@
 <div id="wrapper">
   
 	<div id="navigation">
-			<a href="http://timmschoof.com">About</a><br>
-			<a href="/contact/">Contact</a><br>
-			<a href="/archives/">Archives</a><br>
-			<a href="http://feeds.feedburner.com/timmschoof">Subscribe</a><br>
+		<ul>
+			<li><a href="http://timmschoof.com">About</a></li>
+			<li><a href="/contact/">Contact</a></li>
+			<li><a href="/archives/">Archives</a></li>
+			<li><a href="http://feeds.feedburner.com/timmschoof">Subscribe</a></li>
+		</ul>
 	</div> <!--navigation-->
 	
 	<div id="content">
