--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -105,6 +105,9 @@ a.header {
         line-height: 1.6875;
         padding: 0 5%;
 }
+#navigation {
+		display:inline;
+}
 #content {
 		width: 100%;
 }
