--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -9,7 +9,7 @@
 <div id="wrapper">
   
 	<div id="navigation">
-		<ul>
+		<ul class="navigation">
 			<li><a href="http://timmschoof.com">About</a></li>
 			<li><a href="/contact/">Contact</a></li>
 			<li><a href="/archives/">Archives</a></li>
